fixed youtube alignment

--- a/src/index.css
+++ b/src/index.css
@@ -562,26 +562,23 @@ button {
     filter: brightness(0.85);
 } */
 
+/* video */
+
 .video-container {
-    position: relative;
-    padding-bottom: 56.25%;
-    /* 16:9 aspect ratio */
-    height: 0;
-    overflow: hidden;
-    max-width: 100%;
-    /* background: #000; */
-    margin: 20px 0;
+    width: 50%; 
+    margin: 20px auto; 
+    position: relative; 
 }
 
-/* 
-.youtube-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+.video-container iframe {
+    position: absolute; 
+    padding: 50px 100px 75px 100px; 
+    top: 50; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
 }
- */
+
 
 /* Quiz */
 .quiz-intro-container {
